style.css
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
}


.container {
    display: flex;
    flex-direction: column;
}

a {
    text-decoration: none;
    color: #e5e7eb;
}

ul {
    list-style: none;
    display: flex;
    gap: 16px;
}

header {
    background-color: #1f2937;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-shrink: 0;
}

header .header-logo {
    color: #f9faf8;
    font-size: 24px;
}

header .header-items {
    display: flex;
    flex-basis: 100%;
    justify-content: space-between;
    align-items: center;
    margin: 0 500px;
    margin-bottom: 100px;
}

.hero {
    background-color: #1f2937;

}

.hero .hero-items {
    display: flex;
    justify-content: space-between;
    margin: 0 500px;
    margin-bottom: 90px;
}

.hero p {
    width: 450px; 
}

.hero button {
    background-color: #3B82F6;
    color: #f9faf8;
    font-size: 14px;
    font-weight: 600;
    border-style: none;
    border-radius: 5px;
    padding: 8px 24px;
    margin-top: 12px;
}

.hero h1 {
    color: #f9faf8;
    font-size: 48px;
    margin: 0;
    padding: 0;
}

.hero p {
    color: #e5e7eb;
    font-size: 18px;
    margin: 0;
    padding: 0;
}

.hero-image {
    display: flex;
    justify-content: end;
    align-items: center;
}

.car-photo {
    flex: 0 0 100%;
    height: 250px;
    flex: 0;
    border-radius: 5px;

}

.image {
    width: 100%;
    display: flex;
    justify-content: end;
    align-items: center;
}

.info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.info-content {
    display: flex;
    gap: 48px;
    margin-bottom: 128px;
}

.info-title {
    font-size: 32px;
    font-weight: bolder;
}

.box {
    width: 150px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.box-image {
    width: 150px;
    height: 150px;
    border: 4px solid #3B82F6;
    border-radius: 12px;
    overflow: hidden;
    position: relative;
}

.box-text {
    text-align: center;
    color: #303438  ;
}

.box-image img {
    max-width: 180%;
    max-height: 100%;
    border-radius: 7px;
    height: auto;
    position: absolute;
}

.quote-container {
    background-color: #e5e7eb;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.quote-items {
    padding: 150px;
    width: 850px;
    display: flex;
    flex-direction: column;
}

.quote-text {
    font-size: 36px;
    font-weight: 300;
    margin: 0 ;
}

.author {
    font-size: 20px;
    margin: 0;
    align-self: end;
}

.sign-up-container {
    width: 100%;
    display: flex;
    justify-content: center;
    padding: 80px;
}

.sign-up-items {
    display: flex;
    align-items: center;
    background-color: #3B82F6;
    padding: 35px 0px 35px 90px;
    border-radius: 5px;
    width: 700px;
}

.sign-up-text h5 {
    margin: 0;
    padding: 0;
    color: #f9faf8;
    font-size: 18px;
    display: flex;
    flex: 8;
}

.sign-up-text p {
    margin: 0;
    padding: 0;
    color: #e5e7eb;
    font-size: 12px;
}


.sign-up-items button {
    background-color: #3B82F6;
    color: #f9faf8;
    font-size: 14px;
    font-weight: 600;
    border: 2px solid #f9faf8;
    border-style: line;
    border-radius: 5px;
    padding: 4px 18px;
}

.sign-up-button {
    display: flex;
    flex: 1;
    justify-content: end;
    align-items: center;
    padding-right: 80px;
}

footer {
    width: 100%;
    background-color: #1f2937;
    display: flex;
    justify-content: center;
    align-items: center;
    color:#e5e7eb;
    padding: 20px;
}

